--- a/css/estiloIndex.css
+++ b/css/estiloIndex.css
@@ -5,7 +5,7 @@
 	font-size: 13px;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (min-width: 1200px){
 	.carousel-item img{
 		height: 400px;
 	}
